		signal declarations.
		Keep FSDB_VT_STREAM (FSDB transaction type) traces from 
		attempting to be read (for now) as they aren't yet processed.
		Added more space efficient FST dynamic alias encoding.
		Tempfile creation fix for Windows.  Using tmpnam() is not
		enough and fails depending on user permissions.
		Make vcd2fst use FastLZ instead of LZ4 as a default compression
		type if an EVCD file is being processed as it (re-)compresses
		much better.  Using -4/-F/-Z still gives expected results.
		Changed double printf formatting for FSDB to "%.16g" to match
		VCD formatting.
		Added very fast I/O write capability to fst2vcd.
		Added support for FSDB_BYTES_PER_BIT_2B (EVCD) in FSDB loader.
		Added experimental fsdb2vcd in contrib.  It is not currently 
		compiled or used.
		Fix to treesearch to remove duplicate signal names because of
		faulty dumpers.
		Repscript fix for if -R starts without a dumpfile name.
3.3.56	12feb14	Added another crash fix patch for GTK-OSX.
		Fix to regex search to remove duplicate signal names because of
		faulty dumpers.
		Fix to configure.ac for MSYS not adding -lcomdlg32 when Tcl
		is disabled.
		Valgrind fix on deallocated context: old GLOBALS pointer could
		be examined in set_GLOBALS_x().
		Minor cleanup in treesearch_gtk2.c: removed redundant show
		widget invocation.
		Added missing compressBound() for compress2() dest mallocs.
3.3.57	13feb14	Fix for Electric Fence crash in vlist_freeze().
		Updated LZ4 for version r113.
3.3.58	16mar14	Added /Data Format/Popcnt function for ones counting.
		Warnings fixes from new Clang 3.4 scan-build.
		Updated VCD ID generation in various helpers to use a faster,
		equivalent algorithm.
		Change [1] at end of struct to C99 [] notation with appropriate
		allocation size modification.
		System_profiler speed fix for OSX.
3.3.59	10apr14	Use Duff's Device for 8 byte -> 1 byte binary value compression 
		algorithm in FST writer.
		Warnings fixes from cppcheck.